@@ -186,6 +186,7 @@ _tld_to_language = {
     u"mh"        : [],
     u"mil"       : [u"en"],
     u"mk"        : [],
+    u"me"        : [],
     u"ml"        : [],
     u"mm"        : [],
     u"mn"        : [u"mn"],
@@ -237,6 +238,7 @@ _tld_to_language = {
     u"qa"        : [],
     u"re"        : [],
     u"ro"        : [u"ro"],
+    u"rs"        : [],
     u"ru"        : [u"ru"],
     u"rw"        : [],
     u"sa"        : [u"ar"],
